--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,9 +1,9 @@
 <section class="box-border h-full pb-4 bg-white">
     <div class="box-border flex flex-col h-full">
         @if (chatType === 'new') {
-        <div class="flex flex-col h-[100%] gap-5 p-3 md:flex-row">
+        <div class="flex flex-col h-[100%] gap-2 p-3 lg:flex-row">
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-5 ">
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-1 ">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"># </span>
                     Channels
@@ -24,7 +24,7 @@
 
             <span class="border border-gray-500"></span>
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-5">
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-1">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"> &#64;</span>
                     Personen
