--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -3,15 +3,15 @@
         @if (chatType === 'new') {
         <div class="flex flex-col h-[100%] gap-2 p-3 lg:flex-row">
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-1 ">
+            <div [ngClass]="{'elegant-pulse-container': filterService.newMessageChannels.length > 0}" class="flex flex-col items-center size-full rounded-[30px] p-1 ">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"># </span>
                     Channels
                 </h2>
 
-                <ul class="flex flex-col gap-5">
+                <ul class="flex flex-wrap justify-center w-full gap-5">
                     @for (channel of filterService.newMessageChannels; track $index) {
-                    <li class="flex items-center justify-between p-2 bg-gray-100 rounded">
+                    <li class="flex items-center w-full max-w-[200px] justify-between gap-3 p-5 bg-white rounded-[30px]">
                         <span>#{{ channel.name }}</span>
                         <button (click)="filterService.removeFromSelection(channel)" class="text-red-500">
                             <img class="size-8" src="/assets/icons/trash.png" alt="">
@@ -24,15 +24,15 @@
 
             <span class="border border-gray-500"></span>
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-1">
+            <div [ngClass]="{'elegant-pulse-container' :filterService.newMessagePersons.length > 0}" class="flex flex-col items-center  size-full rounded-[30px] p-1">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"> &#64;</span>
                     Personen
                 </h2>
 
-                <ul class="flex flex-col gap-5">
+                <ul class="flex flex-wrap justify-center w-full gap-5">
                     @for (person of filterService.newMessagePersons; track $index) {
-                    <li class="flex items-center justify-between p-2 bg-gray-100 rounded">
+                    <li class="flex items-center justify-between w-full max-w-[300px] p-2 bg-white rounded-[30px]">
                         <app-user [userInfo]="person"></app-user>
                         <button (click)="filterService.removeFromSelection(person)" class="ml-2 text-red-500">
                             <img class="size-8" src="/assets/icons/trash.png" alt="">
