--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -3,7 +3,8 @@
         @if (chatType === 'new') {
         <div class="flex flex-col h-[100%] gap-2 p-3 lg:flex-row">
 
-            <div [ngClass]="{'elegant-pulse-container': filterService.newMessageChannels.length > 0}" class="flex flex-col items-center size-full rounded-[30px] p-1 ">
+            <div [ngClass]="{'elegant-pulse-container': filterService.newMessageChannels.length > 0}"
+                class="flex flex-col items-center min-h-80 size-full overflow-auto rounded-[30px] p-1 ">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"># </span>
                     Channels
@@ -11,10 +12,11 @@
 
                 <ul class="flex flex-wrap justify-center w-full gap-5">
                     @for (channel of filterService.newMessageChannels; track $index) {
-                    <li class="flex items-center w-full max-w-[200px] justify-between gap-3 p-5 bg-white rounded-[30px]">
+                    <li
+                        class="flex items-center w-full max-w-[200px] justify-between gap-3 p-5 bg-white rounded-[30px] shadow-md">
                         <span>#{{ channel.name }}</span>
                         <button (click)="filterService.removeFromSelection(channel)" class="text-red-500">
-                            <img class="size-8" src="/assets/icons/trash.png" alt="">
+                            <img class="size-7 hover:scale-[1.1] duration-150" src="/assets/icons/trash.png" alt="">
                         </button>
                     </li>
                     }
@@ -24,7 +26,8 @@
 
             <span class="border border-gray-500"></span>
 
-            <div [ngClass]="{'elegant-pulse-container' :filterService.newMessagePersons.length > 0}" class="flex flex-col items-center  size-full rounded-[30px] p-1">
+            <div [ngClass]="{'elegant-pulse-container' :filterService.newMessagePersons.length > 0}"
+                class="flex flex-col items-center min-h-80 overflow-auto size-full rounded-[30px] p-1">
                 <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"> &#64;</span>
                     Personen
@@ -32,10 +35,11 @@
 
                 <ul class="flex flex-wrap justify-center w-full gap-5">
                     @for (person of filterService.newMessagePersons; track $index) {
-                    <li class="flex items-center justify-between w-full max-w-[300px] p-2 bg-white rounded-[30px]">
+                    <li
+                        class="flex items-center justify-between w-full max-w-[300px] p-2 bg-white rounded-[30px] shadow-md">
                         <app-user [userInfo]="person"></app-user>
                         <button (click)="filterService.removeFromSelection(person)" class="ml-2 text-red-500">
-                            <img class="size-8" src="/assets/icons/trash.png" alt="">
+                            <img class="size-7 hover:scale-[1.1] duration-150" src="/assets/icons/trash.png" alt="">
                         </button>
                     </li>
                     }
