style: max-width bg color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="flex justify-center w-full bg-purple2">
+<section class="flex justify-center w-full bg-gradient-to-br from-purple2 via-purple3 to-purple2">
     <div class="relative w-full overflow-y-clip max-w-screen-3xl">
         <router-outlet />
     </div>
