fix: online popup position

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -74,7 +74,7 @@
   <app-confirm-leave-channel (click)="$event.stopPropagation()" class="absolute"></app-confirm-leave-channel>
 </div>
 
-<app-online-popup class="absolute left-52 top-3"></app-online-popup>
+<app-online-popup class="absolute sm:left-10 top-3"></app-online-popup>
 
 @if (channelService.loading) {
 <app-loading-screen></app-loading-screen>
