--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,32 +1,20 @@
 <section
-  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1) max-w-lg bg-white"
->
+  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1) max-w-lg bg-white">
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
-    <img
-      (click)="overlayService.profileOverlay(true, currentUser)"
-      class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
-      src="/assets/icons/close.svg"
-      alt=""
-    />
+    <img (click)="overlayService.profileOverlay(true, currentUser)"
+      class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="" />
   </div>
 
   <div class="flex justify-center w-full">
-    <img
-      class="size-52 rounded-[50%]"
-      src="{{ overlayService.profileObj.avatar }}"
-      alt=""
-    />
+    <img class="size-52 rounded-[50%]" src="{{ overlayService.profileObj.avatar }}" alt="" />
   </div>
   @if (overlayService.editProfil) {
   <div class="grid grid-cols-5 gap-4 mt-4">
     @for (avatar of avatars; track avatar) {
-    <img
-      (click)="selectAvatar(avatar)"
-      class="w-14 h-14 rounded-full cursor-pointer hover:ring-4 hover:ring-purple1 transition-all"
-      [src]="'/assets/imgs/avatar' + avatar + '.svg'"
-      alt="Avatar {{ avatar }}"
-    />
+    <img (click)="selectAvatar(avatar)"
+      class="transition-all rounded-full cursor-pointer size-14 hover:ring-4 hover:ring-purple1"
+      [src]="'/assets/imgs/avatar' + avatar + '.svg'" alt="Avatar {{ avatar }}" />
     }
   </div>
   } @if (overlayService.editProfil) {
@@ -36,12 +24,8 @@
 
       <p>Vollständiger Name</p>
     </div>
-    <input
-      [(ngModel)]="changeName"
-      class="w-full px-5 py-4 border border-lightpurple rounded-[30px]"
-      type="text"
-      placeholder="{{ overlayService.profileObj.name }}"
-    />
+    <input [(ngModel)]="changeName" class="w-full px-5 py-4 border border-lightpurple rounded-[30px]" type="text"
+      placeholder="{{ overlayService.profileObj.name }}" />
   </div>
   } @else {
 
@@ -54,26 +38,18 @@
       @if (overlayService.usersProfilView) {} @else {
       <img
         class="max-[500px]:block cursor-pointer hidden hover:scale-[1.2] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px]"
-        (click)="overlayService.editProfileView()"
-        src="/assets/icons/edit2.svg"
-        alt=""
-      />
+        (click)="overlayService.editProfileView()" src="/assets/icons/edit2.svg" alt="" />
       <span
         class="max-[500px]:hidden cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9] p-[3px] gap-[0px] transition-all text-purple1 ease-out"
-        (click)="overlayService.editProfileView()"
-        >Bearbeiten</span
-      >
+        (click)="overlayService.editProfileView()">Bearbeiten</span>
       }
     </div>
 
     <div class="flex items-center gap-4">
-      <div
-        class="rounded-[50%] size-4"
-        [ngClass]="{
+      <div class="rounded-[50%] size-4" [ngClass]="{
           'bg-online': overlayService.profileObj.online,
           'bg-offline': !overlayService.profileObj.online
-        }"
-      ></div>
+        }"></div>
       @if(overlayService.profileObj.online){ Aktiv } @else { Abwesend }
     </div>
   </div>
@@ -83,19 +59,15 @@
 
     <div class="flex flex-col">
       <span class="font-bold">E-Mail-Adresse</span>
-      <a
-        class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200"
-        [href]="'mailto:' + overlayService.profileObj.email"
-        >{{ overlayService.profileObj.email }}</a
-      >
+      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200"
+        [href]="'mailto:' + overlayService.profileObj.email">{{ overlayService.profileObj.email }}</a>
     </div>
   </div>
 
   } @if (overlayService.usersProfilView) {
   <div class="flex justify-center w-full">
     <button
-      class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]"
-    >
+      class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
       <img src="/assets/icons/mode_comment.svg" alt="" />
       Nachricht
     </button>
@@ -104,15 +76,12 @@
   <div class="flex justify-center w-full gap-8">
     <button
       class="flex px-6 py-3 border border-purple2 text-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]"
-      (click)="overlayService.editProfileView()"
-    >
+      (click)="overlayService.editProfileView()">
       Abbrechen
     </button>
 
-    <button
-      (click)="editProfile()"
-      class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]"
-    >
+    <button (click)="editProfile()"
+      class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
       Speichern
     </button>
   </div>
