--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -20,13 +20,13 @@
   </div>
   } @case ('dm') {
   <div class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary min-w-[300px]"
-    (click)="overlayService.profileOverlay(true, dmService.otherUser)">
+    (click)="overlayService.profileOverlay(true, dmService.chatPartner)">
     <div class="relative">
-      <img class="size-[50px] rounded-full" src="{{ dmService.otherUser.avatar }}" alt="Avatar" />
+      <img class="size-[50px] rounded-full" src="{{ dmService.chatPartner.avatar }}" alt="Avatar" />
       <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2"
         [ngClass]="{ 'bg-online': isOnline, 'bg-offline': !isOnline }" alt="Online"></span>
     </div>
-    <p class="text-xl font-bold">{{ dmService.otherUser.name }}</p>
+    <p class="text-xl font-bold">{{ dmService.chatPartner.name }}</p>
   </div>
   } @case ('new') {
   <div class="flex flex-col gap-5 items-start w-full pt-5 pb-[7px] px-4 justify-center relative">
