refactor: rename functions/variables for clarity

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -76,6 +76,6 @@
 
 <app-online-popup class="absolute sm:left-10 top-3"></app-online-popup>
 
-@if (channelService.loading) {
+@if (channelService.isLoadingChannels) {
 <app-loading-screen></app-loading-screen>
 }
