--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -17,13 +17,13 @@
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Channel-Name</span>
-    <input [(ngModel)]="channelService.createChannel.name" class="px-5 py-4 border border-black rounded-[40px]"
+    <input [(ngModel)]="channelService.channelTemplate.name" class="px-5 py-4 border border-black rounded-[40px]"
       type="text" placeholder="#  z.B. Kooperationsprojekte" />
   </div>
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Beschreibung</span>
-    <textarea [(ngModel)]="channelService.createChannel.description"
+    <textarea [(ngModel)]="channelService.channelTemplate.description"
       class="px-5 py-4 border border-black h-32 rounded-[40px]" placeholder="Dein Text hier" name="" id=""></textarea>
   </div>
 
