--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -46,12 +46,15 @@
     </div>
 
     <div class="flex items-center gap-4">
-      <div class="rounded-[50%] size-4" [ngClass]="{
-          'bg-online': overlayService.profileObj.online,
-          'bg-offline': !overlayService.profileObj.online
-        }"></div>
-      @if(overlayService.profileObj.online){ Aktiv } @else { Abwesend }
+      @if (updateOnlineStatus(overlayService.profileObj)) {
+      <div class="rounded-[50%] size-4 bg-online"></div>
+      <span>Aktiv</span>
+      }@else {
+      <div class="rounded-[50%] size-4 bg-offline"></div>
+      <span>Abwesend</span>
+      }
     </div>
+
   </div>
 
   <div class="flex items-start gap-5">
