--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -69,7 +69,7 @@
 
   } @if (overlayService.usersProfilView) {
   <div class="flex justify-center w-full">
-    <button
+    <button (click)="clickToDm(overlayService.profileObj)"
       class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
       <img src="/assets/icons/mode_comment.svg" alt="" />
       Nachricht
