--- a/src/app/components/shared/popUp/log-out/log-out.component.html
+++ b/src/app/components/shared/popUp/log-out/log-out.component.html
@@ -3,7 +3,7 @@
 
   <div class="flex flex-col h-full">
 
-    <div (click)="overlayService.profileOverlay(false, currentUser)"
+    <div (click)="overlayService.profileOverlay(false, usersService.currentUser)"
       class="flex items-center gap-4 py-2 px-7 h-[50%] rounded-[100px] hover:bg-primary cursor-pointer hover:text-purple3 duration-200 hover:scale-[1.05] active:scale-[0.9]">
       <img src="/assets/icons/account_circle.svg" alt="" />
       <span>Profile</span>
@@ -24,7 +24,7 @@
     </div>
 
 
-    <div (click)="localStorageS.clear();overlayService.logoutOvelay()" routerLink=""
+    <div (click)="localStorageS.remove('currentUser'); logOut(); overlayService.logoutOvelay();" routerLink=""
       class="flex items-center gap-4 py-2 px-7 h-[50%] rounded-[100px] hover:bg-primary cursor-pointer hover:text-purple3 duration-200 hover:scale-[1.05] active:scale-[0.9]">
       <img src="/assets/icons/logout.svg" alt="" />
       <span>Log out</span>
