--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -2,7 +2,7 @@
   class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1) max-w-lg bg-white">
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
-    <img (click)="overlayService.profileOverlay(true, currentUser)"
+    <img (click)="overlayService.profileOverlay(true, userService.currentUser)"
       class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt="" />
   </div>
 
