Refactor: auth service

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -41,7 +41,7 @@
       <p class="w-full text-sm text-center text-red-500">{{ error }}</p>
       }
 
-      <button (click)="googleLogin()" type="button"
+      <button (click)="signInWithGoogle()" type="button"
         class="flex items-center justify-center w-full px-4 py-2 space-x-2 border rounded-full border-lightpurple hover:bg-primary">
         <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google Icon" class="w-5 h-5" />
         <span>Anmelden mit Google</span>
