--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -14,6 +14,7 @@
 
 
   <img src="assets/imgs/icons/logo.svg" alt="Logo" class="absolute hidden h-16 md:block top-4 left-4" />
+  <img src="assets/imgs/icons/logo.svg" alt="Logo" class="absolute block h-16 md:hidden top-9 left-1/2 -translate-x-1/2" />
 
   <div
     class="flex flex-col items-center justify-center min-h-screen px-4 transition-opacity duration-700 ease-in-out"
