--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -16,10 +16,10 @@
   <img src="assets/imgs/icons/logo.svg" alt="Logo" class="absolute hidden h-16 md:block top-4 left-4" />
 
   <div
-    class="flex flex-col items-center justify-center min-h-screen px-4 transition-opacity duration-700 ease-in-out"
-    [ngClass]="{ 'opacity-0': !showContent, 'opacity-100': showContent }">
+    class="flex flex-col items-center justify-center min-h-screen px-4"
+    >
 
-    <div class="items-center justify-center w-full fley animate-slide-fade-up">
+    <div class="items-center justify-center w-full">
       @if (landingService.landing() == 'login') {
       <app-login class="flex items-center justify-center"></app-login>
       }
