--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,6 +1,6 @@
 <section class="box-border h-full pb-4 bg-white">
     <div class="box-border flex flex-col h-full">
-        @if (chatType === 'new') {
+      <!--   @if (chatType === 'new') {
         <div class="flex flex-col h-[100%] gap-2 p-3 lg:flex-row">
 
             <div [ngClass]="{'elegant-pulse-container': filterService.newMessageChannels.length > 0}"
@@ -47,7 +47,7 @@
             </div>
 
         </div>
-        }
+        } -->
 
 
 
