--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -68,17 +68,21 @@
 
 
 
-<form class="relative flex flex-col items-center w-full gap-8 px-10 py-10 text-xl bg-white shadow-md rounded-3xl"
+<form
+  class="relative min-w-[320px] flex flex-col items-center w-full gap-4 px-5 py-5 text-lg bg-white shadow-md sm:py-10 sm:gap-8 sm:px-10 sm:text-xl rounded-3xl"
   (ngSubmit)="goToAvatar(contactForm)" #contactForm="ngForm">
 
+  <div class="flex ">
+    <img src="assets/icons/Property 1=Default (1).svg" alt="Zurück"
+      class=" xs:absolute hover:scale-[1.1] duration-150 cursor-pointer left-10 size-10" (click)="goBack()" />
 
-  <img src="assets/icons/Property 1=Default (1).svg" alt="Zurück"
-    class="absolute hover:scale-[1.1] duration-150 cursor-pointer left-10 size-10" (click)="goBack()" />
+    <div class="flex items-center">
 
-  <div class="flex items-center">
+      <h1 class="text-2xl font-bold xs:text-3xl sm:text-4xl text-purple1">Konto erstellen</h1>
+    </div>
 
-    <h1 class="text-4xl font-bold text-purple1">Konto erstellen</h1>
   </div>
+
 
 
 
@@ -98,7 +102,7 @@
       [(ngModel)]="registerData.name" name="name" required />
 
     @if(!name.valid && name.touched){
-    <span class="shake-animation absolute w-full text-center text-lg text-red-500 bottom-[-30px]">Pleace enter
+    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace enter
       name</span>
     }
   </div>
@@ -114,7 +118,8 @@
       pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" />
 
     @if(!email.valid && email.touched){
-    <span class="absolute shake-animation w-full text-lg text-red-500 bottom-[-30px] text-center">Pleace enter email</span>
+    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace enter
+      email</span>
     }
 
   </div>
@@ -129,7 +134,8 @@
       [(ngModel)]="registerData.password" name="password" required />
 
     @if(!password.valid && password.touched){
-    <span class="absolute w-full shake-animation text-lg text-center text-red-500 bottom-[-30px]">Pleace enter password</span>
+    <span class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace enter
+      password</span>
     }
   </div>
 
@@ -139,7 +145,7 @@
       <img class="cursor-pointer size-5" [src]="imageUrl" alt="" (click)="changeImage();checkCheckbox()">
     </span>
 
-    Ich stimme der <a class="text-purple1" href="privacy">Datenschutzerklärung</a> zu.
+    <span>Ich stimme der <a class="text-purple1" href="privacy">Datenschutzerklärung</a> zu.</span>
   </div>
 
 
