--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -7,19 +7,15 @@
   <app-splash-screen class="splash-screen"></app-splash-screen>
   }
 
-  <div class="absolute bottom-0 flex-col gap-5 h-fit md:flex md:top-4 md:right-4">
-    <p class="text-base text-black">Neu bei DABubble?</p>
-    <button (click)="goToRegister()"
-      class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] hover:border-textgray rounded-full text-purple1">
-      Konto erstellen
-    </button>
-  </div>
 
 
 
 
 
-  <div class="flex items-center justify-center w-full">
+
+
+
+  <div class="flex items-center justify-center w-full mt-[12%] mb-[5%]">
     @if (landingService.landing() == 'login') {
     <app-login class="flex items-center justify-center"></app-login>
     }
@@ -36,6 +32,17 @@
     <app-resetpw-request class="flex items-center justify-center"></app-resetpw-request>
     }
   </div>
+
+
+  @if (landingService.landing() == 'login') {
+  <div class="md:absolute bottom-[3%] flex-col gap-5 h-fit md:flex md:top-4 md:right-4">
+    <p class="text-base text-black">Neu bei DABubble?</p>
+    <button (click)="goToRegister()"
+      class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] border-purple1 rounded-full text-purple1">
+      Konto erstellen
+    </button>
+  </div>
+  }
 
 
   <div class="absolute bottom-0 flex gap-32">
