--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,6 @@
-<section class="flex flex-col items-center justify-center w-full h-screen bg-primary">
+<section class="flex flex-col items-center justify-center w-full min-h-screen bg-primary">
 
-  <img src="assets/imgs/icons/logo.svg" alt="Logo"
-    class="absolute h-12 xs:h-14 md:h-16 lg:h-18 top-[5%] md:block md:top-4 md:left-4" />
+
 
   @if (showSplash) {
   <app-splash-screen class="splash-screen"></app-splash-screen>
@@ -15,7 +14,11 @@
 
 
 
-  <div class="flex items-center justify-center w-full mt-[12%] mb-[5%]">
+  <div class="flex flex-col gap-5 items-center justify-center min-h-[700px] w-full mt-[12%] mb-[5%]">
+
+    <img src="assets/imgs/icons/logo.svg" alt="Logo"
+      class="md:absolute h-12 xs:h-14 md:h-16 lg:h-18 top-[5%] md:block md:top-4 md:left-4" />
+
     @if (landingService.landing() == 'login') {
     <app-login class="flex items-center justify-center"></app-login>
     }
@@ -31,18 +34,21 @@
     @if (landingService.landing() == 'request') {
     <app-resetpw-request class="flex items-center justify-center"></app-resetpw-request>
     }
+
+
+
+    @if (landingService.landing() == 'login') {
+    <div class="md:absolute bottom-[3%] flex-col gap-5 h-fit md:flex md:top-4 md:right-4">
+      <p class="text-base text-black">Neu bei DABubble?</p>
+      <button (click)="goToRegister()"
+        class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] border-purple1 rounded-full text-purple1">
+        Konto erstellen
+      </button>
+    </div>
+    }
   </div>
 
 
-  @if (landingService.landing() == 'login') {
-  <div class="md:absolute bottom-[3%] flex-col gap-5 h-fit md:flex md:top-4 md:right-4">
-    <p class="text-base text-black">Neu bei DABubble?</p>
-    <button (click)="goToRegister()"
-      class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] border-purple1 rounded-full text-purple1">
-      Konto erstellen
-    </button>
-  </div>
-  }
 
 
   <div class="absolute bottom-0 flex gap-32">
