refactor: search dropdown

--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -14,27 +14,14 @@
 
     <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]" />
   </div>
-  <!-- } [disabled]="filterService.isChatInputActive()" -->
+  
 
-  @if (filterService.searchValue().length >= 1 && !mainNavService.showNav()) {
+  @if (filterService.searchValue().length >= 1) {
 
   <div
     class="absolute z-10 w-full bg-white border border-black shadow-lg max-h-96 h-fit rounded-[30px] p-5 overflow-auto">
 
     @if (filterService.filteredResults().length > 0) {
-    <!-- <ul class="flex flex-col">
-      @for (item of filterService.filteredResults(); track $index) {
-
-      @if (isUser(item)) {
-      <li (click)="clickUser(item)"><app-user [userInfo]="item"></app-user></li>
-      } @else if (isChannel(item) && isMember(item)) {
-      <li (click)="clickChannel(item)"
-        class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
-        <span class="font-bold">#</span> {{item.name}}
-      </li>
-      }
-      }
-    </ul> -->
 
     <ul class="flex flex-col">
       @for (item of filterService.filteredResults(); track $index) {
