--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="flex justify-center w-full bg-primary">
-   <div class="relative w-full overflow-y-clip max-w-screen-3xl">
+   <div class="relative w-full overflow-hidden max-w-screen-3xl">
         <router-outlet />
     </div>
 </section>
