--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-[80px] bg-primary flex justify-between items-center pr-[16px] pl-[16px]">
+<div class="flex items-center justify-between w-full p-4 border border-black bg-primary">
 
   <img id="logo" src="assets/imgs/logo.svg" alt="DaBubble Logo" class="hidden h-16 mt-4 md:block" />
 
