--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,12 +1,12 @@
-<section class="relative">
+<section class="relative text-xl">
 
   <div
-    class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px] lg:flex">
+    class="w-full h-16 bg-white border border-gray-300 rounded-[42px] flex items-center justify-between py-[8px] px-[24px] lg:flex">
 
-    <input type="text" [(ngModel)]="filterService.searchValue" placeholder="Search..."
-      class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none pl-[10px]" />
+    <input type="text" [(ngModel)]="filterService.searchValue" placeholder="Devspace durchsuchen"
+      class="size-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none pl-[10px]" />
 
-    <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]" />
+    <img src="assets/imgs/icons/icons.svg" alt="" class="size-9" />
   </div>
   
 
