fix: valid-input and guest login

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -92,11 +92,11 @@
 
   <div
     class="flex items-center w-full max-w-[500px] relative bg-primary px-4 py-3 gap-2 rounded-[100px] input-container"
-    [ngClass]="{'invalid': !name.valid && (name.touched || contactForm.submitted), 'valid': name.valid}">
-    <img src="assets/imgs/icons/person_filled.svg" alt="User Icon" class="size-5" />
-    <input #name="ngModel" type="text" placeholder="beispielname@email.com" class="flex-1 outline-none bg-primary"
-      [(ngModel)]="loginData.email" name="name" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" required />
-    @if(!name.valid && name.touched){
+    [ngClass]="{'invalid': !email.valid && (email.touched || contactForm.submitted), 'valid': email.valid}">
+    <img src="assets/imgs/icons/mail.svg" alt="Mail Icon" class="size-5" />
+    <input #email="ngModel" type="email" placeholder="beispielname@email.com" class="flex-1 outline-none bg-primary"
+      [(ngModel)]="loginData.email" name="email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" required />
+    @if(!email.valid && (email.touched || contactForm.submitted)){
     <span
       class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace
       enter
@@ -107,20 +107,20 @@
 
   <div
     class="flex relative items-center w-full max-w-[500px] bg-primary px-4 py-3 gap-2 rounded-[100px] input-container"
-    [ngClass]="{'invalid': !email.valid && (email.touched || contactForm.submitted), 'valid': email.valid}">
-    <img src="assets/imgs/icons/mail.svg" alt="Mail Icon" class="size-5" />
-    <input #email="ngModel" type="text" placeholder="beispielname@email.com" class="flex-1 outline-none bg-primary"
-      [(ngModel)]="loginData.password" name="email" required />
-    @if(!email.valid && email.touched){
+    [ngClass]="{'invalid': !password.valid && (password.touched || contactForm.submitted), 'valid': password.valid}">
+    <img src="assets/imgs/icons/lock.svg" alt="Lock Icon" class="size-5" />
+    <input #password="ngModel" type="password" placeholder="beispielname@email.com"
+      class="flex-1 outline-none bg-primary" [(ngModel)]="loginData.password" name="password" required />
+    @if(!password.valid && (password.touched || contactForm.submitted)){
     <span
-      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">Pleace
-      enter
-      email</span>
+      class="shake-animation absolute w-full text-center text-base  sm:text-lg text-red-500 bottom-[-22px] sm:bottom-[-30px]">
+      Pleace enter email
+    </span>
     }
   </div>
 
 
-  <span (click)="change()" class="cursor-pointer  text-purple2 hover:underline">Passwort vergessen?</span>
+  <span (click)="change()" class="cursor-pointer text-purple2 hover:underline">Passwort vergessen?</span>
 
 
   <div class="flex items-center w-full gap-4">
